# python-c-extension-boilerplate

./: README.md  meson.build  pyproject.toml
src/: __init__.py  math_c.h  math_c_ext.c  math_c_impl.c  math_py.py  meson.build
