[project]
name = "math_example"
version = "1.0.0"
description = "A Python C extension with some math examples."
readme = "README.md" # for long description
authors = [
    { name = "Ankith", email = "itsankith26@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"
